Delete include files
Delete include files taht not used!

--- a/myapp/leds/Makefile
+++ b/myapp/leds/Makefile
@@ -1,9 +1,9 @@
-#Е▄┘Ф▀╛Е╓╢Ф√┤Д╩╤О╪▄Ф┴╖Х║▄Ф╗║Е╪▐Х╖└Е┬≥
+#╟Эю╗м╥нд╪Чё╛ж╢ппдёй╫╧ФтР
 include $(MAKEROOT)/env.mk
 
 SRCS := $(wildcard *.c)
 
-#Г■÷Ф┬░Ф┴─Ф°┴.cФ√┤Д╩╤Е╞╧Е╨■Г └.oФ√┤Д╩╤
+#иЗЁикЫсп.cнд╪Ч╤тс╕╣д.oнд╪Ч
 OBJS := $(patsubst %.c,%.o,$(SRCS))
 
 .PHONY : all
